CHANGELOG:

ver 1.5.5 (09/05/2007)
 Added: 	Modalbox can override standard alert messages. Use overrideAlert to toggle this feature on/off.
 Added: 	Added an option to toggle animated transitions on/off [#98]
 Changed: 	Default transition intervals changed
 Changed: 	_update method re-factored
 Changed: 	_findFocusableElements method re-factored to exclude hidden inputs
 Changed: 	Moving focus in direct and reverse order (by Shift+TAB combo)
 Fixed: 	On resize modalbox contents were stretched to 90px if height wasn't defined
 Fixed: 	Overlay initial flicker effect removed [#104]
 Fixed: 	Evaluating javascripts after loading the content fixed [#100]
 Fixed: 	Re-factored SELECTs toggle method for IEs [#111]
 Fixed: 	Focusing by TAB key issue in Safari [#3]

ver 1.5.4 (07/16/2007)
 Added: 	Overlay opacity parameter added
 Added: 	ModalBox now accepts HTML (plain & object) as a content parameter [#21]
 Added: 	Defining height now switches ModalBox to 'scrollable' viewport state [#26]
 Added: 	ModalBox resizes automatically to fit content height [#26]
 Added: 	Check for initialized MB on hide attempt
 Added: 	Activate and Deactivate methods added for easily activation/deactivation of MB interactions
 Fixed: 	PageUp/Down/Home/End buttons doesn't work on input elements [#58]
 Fixed: 	Resize method don't resize anymore for a less then a content height. If the content height defined, this value is being used to calculate minimal resize height
 Fixed: 	Resizing works correctly in IE6 [#77]
 Fixed: 	Removed non-standard opacity rules from CSS [#57]
 Changed: 	Options saves between sequences of windows. [was buggy. now fixed]
 Changed: 	Title made not mandatory parameter and moved to options. !!! IMPORTANT: Changed APIs !!! [#83]
 Changed: 	Changelog separated from the source code
 Changed: 	Basic MB visual style changed
 Changed: 	'isInitialized' property renamed to 'initialized'

ver 1.5.3 (04/21/2007)
 Added: 	Unit and functional tests added